# dining-philosophers-problem

Dinning_philosophers_problem/: CMakeLists.txt  main.cpp
